# miden-lsp

./: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
extensions/miden-vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tree-sitter-masm.lock.json  tsconfig.json
extensions/miden-vscode-extension/src/: extension.ts
extensions/miden-vscode-extension/syntaxes/: masm.tmLanguage.json
extensions/miden-zed-extension/: Cargo.toml  README.md  extension.toml
src/: analysis.rs  backend.rs  document.rs  lib.rs  main.rs  stack_effect.rs
