[package]
name = "miden-lsp"
description = "Language server for Miden projects"
license = "MIT or Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter-masm = "0.1"
#miden-project = { path = "../miden-vm/crates/project" }
#miden-mast-package = { path = "../miden-vm/crates/mast-package" }
