[package]
name = "miden-lsp"
description = "Language server for Miden projects"
license = "MIT or Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
miden-assembly-syntax = { path = "../miden-vm/crates/assembly-syntax" }
miden-core = { path = "../miden-vm/core" }
miden-mast-package = { path = "../miden-vm/crates/mast-package" }
miden-package-registry = { path = "../miden-vm/crates/package-registry", features = ["resolver"] }
miden-project = { path = "../miden-vm/crates/project" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp = "0.20.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tree-sitter = "0.26"
tree-sitter-masm = "0.1"

[dev-dependencies]
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
